[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/fonts/data/kenney_pixel.ttf" type="FontFile" id=1]
[ext_resource path="res://assets/ui/fonts/data/kenney_thick.ttf" type="FontFile" id=2]
[ext_resource path="res://assets/ui/general/general_ui.tres" type="Theme" id=3]
[ext_resource path="res://scenes/match_default/match_default.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/panels/light/panel_yellow_light.tres" type="StyleBox" id=5]
[ext_resource path="res://objects/map/Map.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/buttons/small/yellow/button_yellow_small.tres" type="Theme" id=7]
[ext_resource path="res://assets/ui/icons/icon_leave.png" type="Texture2D" id=8]
[ext_resource path="res://assets/ui/buttons/small/red/button_red_small.tres" type="Theme" id=9]
[ext_resource path="res://assets/ui/panels/metal/panel_red_metal.tres" type="StyleBox" id=10]
[ext_resource path="res://helpers/cameras/match_camera/MatchCamera.tscn" type="PackedScene" id=11]

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="MatchDefault" type="Node2D"]
script = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PanelScore" type="PanelContainer" parent="UI"]
modulate = Color( 1, 1, 1, 0.705882 )
offset_right = 396.0
offset_bottom = 217.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextScore" type="RichTextLabel" parent="UI/PanelScore"]
offset_left = 12.0
offset_top = 12.0
offset_right = 384.0
offset_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="BtnLeave" type="Button" parent="UI"]
modulate = Color( 1, 1, 1, 0.705882 )
offset_left = 4.0
offset_top = 539.0
offset_right = 60.0
offset_bottom = 595.0
theme = ExtResource( 9 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupLeave" type="Window" parent="UI"]
visible = true
offset_left = 281.0
offset_top = 411.0
offset_right = 568.0
offset_bottom = 528.0
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PopupLeave"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblLeavePrompt" type="Label" parent="UI/PopupLeave/VBoxContainer"]
offset_top = 20.0
offset_right = 287.0
offset_bottom = 44.0
text = "Leave current match?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PopupLeave/VBoxContainer"]
offset_top = 48.0
offset_right = 287.0
offset_bottom = 96.0
alignment = 1

[node name="BtnLeaveConfirm" type="Button" parent="UI/PopupLeave/VBoxContainer/HBoxContainer"]
offset_left = 53.0
offset_right = 135.0
offset_bottom = 48.0
theme = ExtResource( 9 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLeaveCancel" type="Button" parent="UI/PopupLeave/VBoxContainer/HBoxContainer"]
offset_left = 139.0
offset_right = 233.0
offset_bottom = 48.0
theme = ExtResource( 7 )
text = "cancel"

[node name="MatchCamera" parent="." instance=ExtResource( 11 )]

[connection signal="loading_failed" from="Map" to="." method="_on_Map_loading_failed"]
[connection signal="pressed" from="UI/BtnLeave" to="." method="_on_BtnLeave_pressed"]
[connection signal="pressed" from="UI/PopupLeave/VBoxContainer/HBoxContainer/BtnLeaveConfirm" to="." method="_on_BtnLeaveConfirm_pressed"]
[connection signal="pressed" from="UI/PopupLeave/VBoxContainer/HBoxContainer/BtnLeaveCancel" to="." method="_on_BtnLeaveCancel_pressed"]
